[package]
name = "lessons"
description = "lessons"
version = "0.1.0"
edition = "2021"
authors = ["amar-jay <abdelmanan.abdelrahman03@gmail.com>"]


[dependencies]
rand = '0.8.4'
regex = '1'
chrono = '0.4.22'
num-traits = { version = "0.2", optional = true }
num-bigint = { version = "0.4", optional = true }
lazy_static = '1.4.0'

[features]
default = ["big-math"]
big-math = ["dep:num-bigint", "dep:num-traits"]
